welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: ';' expected but ',' found.
l faut faire quatre pas en avant, deux pas à gauche, 
                                ^